deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-app
spec:
  replicas:
  selector:
    matchLabels:
      app: my-test-app
  template:
    metadata:
      labels:
        app: my-test-app
    spec:
      containers:
      - name: my-test-app
        image: ruslanfialkovskii/test:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: 128Mi
            cpu: 0.1
          limits:
            memory: 128Mi
            cpu: 0.2
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - my-test-app
            topologyKey: "kubernetes.io/hostname"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
