service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-test-app-service
spec:
  selector:
    app: my-test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
